# crit

./: .gitignore  .plan  Makefile  README.md  compare.py  extract.py  pyproject.toml  report.py  run.sh
crit/: compare.py  extract.py  logging.py  vector.py
experiments/: 1-input.json  1-output.json  2-input.json  2-output.json
prompts/: combinations-v1.txt  v1.txt
public/: style.css
templates/: report.html
